# todoApi-PT

./: .env.example  .gitignore  README.md  docker-compose.yml  ensure_database.py  pyproject.toml  requirements.txt  test_db_connection.py
app/: main.py
app/api/v1/: auth.py  tasks.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: task.py  user.py
app/schemas/: task.py  user.py
app/services/: auth_service.py  task_service.py
app/tests/: conftest.py  test_auth.py  test_task.py
migrations/: env.py
migrations/versions/: b36ac2e23349_change_task_model.py  c19292b3bee8_init.py
